--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,8 @@ description = "Add your description here"
 requires-python = ">=3.12"
 dependencies = [
     "django>=5.2.7",
+    "django-ckeditor-5>=0.2.18",
+    "drf-spectacular>=0.28.0",
+    "psycopg2-binary>=2.9.10",
     "python-dotenv>=1.1.1",
 ]
