--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ services:
   backend_service:
     build: .
     env_file:
-      - .env
+      - .env.prod
     ports:
       - "8000:8000"
     depends_on:
@@ -16,6 +16,11 @@ services:
       - "5432:5432"
     volumes:
       - pg_data:/var/lib/postgresql/data
+
+  redis_service:
+    image: redis:alpine
+    ports:
+      - "6379:6379"
 
 volumes:
   pg_data:
