--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,11 @@ dependencies = [
     "djangorestframework>=3.16.1",
     "djangorestframework-simplejwt>=5.5.1",
     "drf-spectacular>=0.28.0",
+    "flake8>=7.3.0",
+    "flake8-bugbear>=24.12.12",
+    "flake8-docstrings>=1.7.0",
+    "flake8-import-order>=0.19.2",
+    "isort>=6.1.0",
     "psycopg2-binary>=2.9.10",
     "python-dotenv>=1.1.1",
 ]
