--- a/setup.cfg
+++ b/setup.cfg
@@ -1,13 +1,11 @@
 [flake8]
-max-line-length = 100
+max-line-length = 122
 exclude =
     migrations,
     __pycache__,
+    .venv
     venv
+    __init__.py
 ignore =
     E203,
     W503
-
-
-
-#uv add flake8-bugbear flake8-import-order flake8-docstrings
