--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ POSTGRES_USER="postgres"
 POSTGRES_PASSWORD=1
 POSTGRES_HOST='localhost' #postgres_service
 POSTGRES_PORT="5432"
+REDIS_HOST=localhost
+REDIS_PORT=6379
