--- a/.env.prod
+++ b/.env.prod
@@ -1,5 +1,5 @@
 SECRET_KEY='Valijon'
-POSTGRES_DATABASE="postgres"
+POSTGRES_DATABASE="rentcar_project_db"
 POSTGRES_USER="postgres"
 POSTGRES_PASSWORD=1
 POSTGRES_HOST='postgres_service' #postgres_service
